Ensure ff-dialog doesn't extend off screen

--- a/stylesheets/ff-components.scss
+++ b/stylesheets/ff-components.scss
@@ -383,6 +383,9 @@ li.ff-list-item {
   z-index: 2;
   width: 100%;
   max-width: 42rem;
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
   background-color: $ff-white;
   .ff-dialog {
     &-header {
@@ -393,6 +396,9 @@ li.ff-list-item {
       padding: 0 $ff-unit-lg;
       color: $ff-white;
       font-weight: 600;
+    }
+    &-body {
+      overflow-y: auto;
     }
     &-content {
       padding: $ff-funit-lg;
